# api-python

./: .gitallowed  .gitignore  Accessing_Superfund_data_from_Data_Commons.ipynb  Analyzing_Census_Data_with_Data_Commons.ipynb  Analyzing_SuperfundSites_with_Data_Commons.ipynb  CHANGELOG.md  Case_Study_Analyzing_Income_Distribution.ipynb  Case_Study_Prevalence_of_Obesity_in_500_US_Cities.ipynb  Classification_and_Model_Evaluation.ipynb  Dockerfile  Introduction_to_Clustering.ipynb  Missing_Data_Imputation_Tutorial.ipynb  README.md  Regression_Basics_and_Prediction.ipynb  Regression_Evaluation_and_Interpretation.ipynb  Test_Notebook.ipynb  V2_Feature_Engineering.ipynb  WORKSPACE  analyzing_census_data.ipynb  build.sh  cloudbuild.yaml  pyproject.toml  requirements.bazel.txt  requirements.txt  run_test.sh  run_tests.sh  run_tests_local.sh  setup.py  setup_datacommons.py  setup_datacommons_pandas.py  setup_dcpandas.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md  default-template.md  python-api-v1-0-0-feedback.md
api-R/: DESCRIPTION  NAMESPACE  README.md  demo-notebook.Rmd  demo-notebook.html  demo-notebook.nb.html
api-R/R/: node-core.R  places.R  popobs.R  query.R  util.R  zzz.R
api-R/man/: GetObservations.Rd  GetPlacesIn.Rd  GetPopulations.Rd  GetPropertyLabels.Rd  GetPropertyValues.Rd  GetTriples.Rd  Query.Rd
api-R/tests/: testthat.R
api-R/tests/testthat/: test-node-core.R  test-places.R  test-popobs.R  test-query.R  test-util.R
data_gemma/: README.md
data_gemma/data_gemma/: __init__.py  base.py  baseline.py  dc.py  llms.py  rag.py
datacommons/: BUILD.bazel  README.md  __init__.py  _auth.py  _constants.py  bio.py  chunked_query_test.py  core.py  datacommons.py  datacommons_test.py  event.py  key.py  node.py  observation.py  places.py  plot_utils.py  populations.py  properties.py  property_values.py  query.py  requests.py  setup.py  sparql.py  stat_vars.py  statvar.py  triples.py  utils.py  weather.py
datacommons/data/: cdc_tb.mcf  san_jose_lpa.mcf
datacommons/examples/: BUILD.bazel  add_property_query.py  analysis_populations.py  analysis_weather.py  bio_basic.py  core.py  core_basic.py  core_pandas.py  dcframe_basic.py  dcframe_cache.py  dcframe_expand.py  dcframe_manipulation.py  dcframe_places.py  dcnode_basic.py  dcquery_basic.py  frame_basic.py  frame_places.py  get_instances.py  histogram.py  multiple_populations.py  node_basic.py  places.py  places_basic.py  places_pandas.py  plot_histogram.py  plot_scatter.py  plotting.py  population_analysis.py  populations.py  populations_basic.py  populations_pandas.py  query.py  query_basic.py  scatter.py  simple_query.py  stat_vars.py  statvar.py  time_series.py  weather_analysis.py  weather_basic.py
datacommons/test/: BUILD.bazel  core_test.py  datacommons_test.py  node_test.py  places_test.py  populations_test.py  query_test.py  set_api_key_test.py  sparql_test.py  stat_vars_test.py  statvar_test.py
datacommons_client/: README.md  __init__.py  client.py
datacommons_client/endpoints/: base.py  node.py  observation.py  payloads.py  resolve.py  response.py
datacommons_client/models/: base.py  graph.py  node.py  observation.py  resolve.py  sparql.py
datacommons_client/tests/: test_client.py  test_context.py  test_dataframes.py  test_decorators.py  test_names.py  test_utils.py
datacommons_client/tests/endpoints/: test_base.py  test_error_handling.py  test_node_endpoint.py  test_observation_endpoint.py  test_payloads.py  test_request_handling.py  test_resolve_endpoint.py  test_response.py
datacommons_client/tests/models/: test_node_models.py  test_observation_models.py  test_resolve_models.py  test_sparql_models.py
datacommons_client/utils/: context.py  data_processing.py  dataframes.py  decorators.py  error_handling.py  error_hanlding.py  graph.py  names.py  request_handling.py  response.py
datacommons_pandas/: CHANGELOG.md  README.md  __init__.py  core.py  df_builder.py  key.py  node.py  places.py  populations.py  properties.py  property_values.py  query.py  requests.py  setup.py  sparql.py  stat_vars.py  triples.py  utils.py
datacommons_pandas/examples/: df_builder.py
datacommons_pandas/test/: df_builder_test.py
dcpandas/: CHANGELOG.md  README.md  __init__.py  df_builder.py  setup.py
dcpandas/examples/: df_builder.py
dcpandas/test/: __init__.py  df_builder_test.py
docs/: README.md  development.md  release.md
docs/source/: conf.py  data_model.rst  datacommons.core.rst  datacommons.places.rst  datacommons.populations.rst  datacommons.query.rst  datacommons.rst  datacommons.utils.rst  index.rst  modules.rst  started.rst  tutorials.rst
kokoro/: README.md  build.sh
llm/: README.md  setup.py
llm/data_gemma/: prompts.py  rig.py  utils.py  validate.py
notebooks/: Accessing_Superfund_data_from_Data_Commons.ipynb  Analyzing_SuperfundSites_with_Data_Commons.ipynb  Custom_Hierarchy_Generator.ipynb  Drug_Discovery_With_Data_Commons.ipynb  Estimating_(Temperature)_Distributions_With_DataCommons_.ipynb  Missing_Data_Imputation_Tutorial.ipynb  Protein_Browser.ipynb  README.md  analyzing_census_data.ipynb  analyzing_education_achievement.ipynb  analyzing_genomic_data.ipynb  analyzing_income_distribution.ipynb  analyzing_obesity_prevalence.ipynb  getting_started.ipynb  missing_data_imputation_tutorial.ipynb
notebooks/intro_data_science/: Classification_and_Model_Evaluation.ipynb  Data_Commons_For_Data_Science_Tutorial.ipynb  Feature_Engineering.ipynb  Introduction_to_Clustering.ipynb  README.md  Regression_Basics_and_Prediction.ipynb  Regression_Evaluation_and_Interpretation.ipynb
notebooks/v2/: Analyzing_Census_Data_with_Data_Commons.ipynb  analyzing_census_data.ipynb  analyzing_income_distribution.ipynb  analyzing_obesity_prevalence.ipynb
schema/: README.md  datacomconfig.json  datacommons.rdfa  datacomschema.yaml  deployment.html  deployment.md  test-datacomconfig.json  test-datacomschema.yaml
schema/templates/: basicPageHeader.tpl  docsBasicPageHeader.tpl  full.tpl  genericTermPageHeader.tpl  headtags.tpl  homepage.tpl  schemas.tpl  topnotes.tpl
(+29 files in other folders)
