load("@requirements//:requirements.bzl", "requirement")

py_binary(
    name="core",
    srcs=["core.py"],
    deps=[
        "//datacommons:datacommons",
    ]
)

py_binary(
    name="places",
    srcs=["places.py"],
    deps=[
        "//datacommons:datacommons",
    ]
)

py_binary(
    name="populations",
    srcs=["populations.py"],
    deps=[
        "//datacommons:datacommons",
    ]
)

py_binary(
    name="query",
    srcs=["query.py"],
    deps=[
        "//datacommons:datacommons",
    ]
)
