load("@requirements//:requirements.bzl", "requirement")


py_test(
    name = "core_test",
    srcs = ["core_test.py"],
    deps = [
        "//datacommons:datacommons",
        requirement("mock"),
        requirement("pandas"),
    ],
    python_version = "PY3"
)

py_test(
    name = "places_test",
    srcs = ["places_test.py"],
    deps = [
        "//datacommons:datacommons",
        requirement("mock"),
        requirement("pandas"),
    ],
    python_version = "PY3"
)

py_test(
    name = "populations_test",
    srcs = ["populations_test.py"],
    deps = [
        "//datacommons:datacommons",
        requirement("mock"),
        requirement("pandas"),
    ],
    python_version = "PY3"
)

py_test(
    name = "query_test",
    srcs = ["query_test.py"],
    deps = [
        "//datacommons:datacommons",
        requirement("mock"),
        requirement("pandas"),
    ],
    python_version = "PY3"
)
